[package]
name = "ring-algorithm"
version = "0.1.2"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "algorithms on ring(Abstruct Algebra)"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/compress_history/"
repository = "https://gitlab.com/Toru3/ring-algorithm"
keywords = ["algorithm", "ring", "algebra", "polynomial"]
categories = ["algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
take_mut = "0.2.2"
[dev-dependencies]
num = "0.2.1"
katex-doc = "0.1.0"
[features]
default = []
debug = []
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]
