[package]
name = "ring-algorithm"
version = "0.2.2"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "algorithms on ring(Abstruct Algebra)"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ring-algorithm/"
homepage = "https://crates.io/crates/ring-algorithm"
repository = "https://gitlab.com/Toru3/ring-algorithm"
readme = "README.md"
keywords = ["algorithm", "ring", "algebra"]
categories = ["algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
take_mut = "0.2.2"
num-bigint = "0.3.0"
[dev-dependencies]
num = "0.3.0"
polynomial-ring = "0.1.1"
[features]
default = []
__internal_inject_debug = [] # DO NOT USE
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
